Refactor config list and table entry key