@@ -1,8 +1,7 @@
 package fr.max2.betterconfig.client.gui.better;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import fr.max2.betterconfig.client.gui.BetterConfigScreen;
 import fr.max2.betterconfig.client.gui.better.widget.NumberInputField;
 import fr.max2.betterconfig.client.gui.better.widget.OptionButton;
@@ -10,7 +9,7 @@ import fr.max2.betterconfig.client.gui.better.widget.StringInputField;
 import fr.max2.betterconfig.client.gui.better.widget.UnknownOptionWidget;
 import fr.max2.betterconfig.client.gui.component.IComponent;
 import fr.max2.betterconfig.client.util.GuiTexts;
-import fr.max2.betterconfig.config.ConfigName;
+import fr.max2.betterconfig.config.ConfigTableKey;
 import fr.max2.betterconfig.config.value.ConfigList;
 import fr.max2.betterconfig.config.value.ConfigNode;
 import fr.max2.betterconfig.config.value.ConfigPrimitive;
@@ -34,7 +33,7 @@ public class BetterConfigBuilder
 	 */
 	public static IComponent build(BetterConfigScreen screen, ConfigTable config)
 	{
-		GuiGroup tableGroup = new BetterConfigBuilder(screen).buildTable(config);
+		GuiGroup tableGroup = new BetterConfigBuilder(screen).buildTable(RootInfo.INSTANCE, config);
 		tableGroup.addClass("better:root_group");
 
 		return new GuiRoot(screen, tableGroup);
@@ -48,9 +47,9 @@ public class BetterConfigBuilder
 		this.screen = screen;
 	}
 
-	private GuiGroup buildTable(ConfigTable table)
+	private GuiGroup buildTable(ConfigName identifier, ConfigTable table)
 	{
-		List<IBetterElement> content = table.getEntryValues().stream().map(entry -> this.visitNode(entry.key(), entry.node())).collect(Collectors.toList());
+		List<IBetterElement> content = table.getEntryValues().stream().map(entry -> this.visitNode(new TableChildInfo(identifier, entry.key()), entry.node())).toList();
 		GuiGroup tableGroup = new GuiGroup(content);
 		tableGroup.addClass("better:table_group");
 		return tableGroup;
@@ -85,7 +84,7 @@ public class BetterConfigBuilder
 
 	private IBetterElement visitTable(ConfigName identifier, ConfigTable table)
 	{
-		return new Foldout(this.screen, identifier, this.buildTable(table));
+		return new Foldout(this.screen, identifier, this.buildTable(identifier, table));
 	}
 
 	private IBetterElement visitList(ConfigName identifier, ConfigList list)
@@ -98,7 +97,7 @@ public class BetterConfigBuilder
 		mainElements.add(new BetterButton(this.screen, Component.translatable(GuiTexts.ADD_ELEMENT_KEY), Component.translatable(GuiTexts.ADD_FIRST_TOOLTIP_KEY))
 				.addOnPressed(() -> list.addValue(0)));
 
-		IReadableList<IBetterElement> content = values.derived((index, elem) -> this.buildListElementGui(list, elem.key(), elem.node(), values.getIndexedProperties().get(index)));
+		IReadableList<IBetterElement> content = values.derived((index, elem) -> this.buildListElementGui(list, new ListChildInfo(identifier, elem.index()), elem.node(), values.getIndexedProperties().get(index)));
 		IListListener<IBetterElement> listListener = new IListListener<>()
 		{
 			@Override
@@ -175,5 +174,128 @@ public class BetterConfigBuilder
 		}
 
 		return new ValueEntry(this.screen, identifier, primitive, widget);
+	}
+}
+
+class ListChildInfo implements ConfigName
+{
+	private final ConfigName parent;
+	private final ConfigList.Index index;
+
+	public ListChildInfo(ConfigName parent, ConfigList.Index index)
+	{
+		this.parent = parent;
+		this.index = index;
+	}
+
+	@Override
+	public String getName()
+	{
+		return this.parent.getName() + "[" + this.index.get() + "]";
+	}
+
+	@Override
+	public Component getDisplayName()
+	{
+		return Component.translatable(GuiTexts.LIST_ELEMENT_LABEL_KEY, this.parent.getName(), this.index.get());
+	}
+
+	@Override
+	public List<String> getPath()
+	{
+		var res = new ArrayList<>(this.parent.getPath());
+		res.add(Integer.toString(this.index.get()));
+		return res;
+	}
+
+	@Override
+	public String getCommentString()
+	{
+		return this.parent.getCommentString();
+	}
+
+	@Override
+	public List<? extends Component> getDisplayComment()
+	{
+		return this.parent.getDisplayComment();
+	}
+}
+
+class TableChildInfo implements ConfigName
+{
+	private final ConfigName parent;
+	private final ConfigTableKey entry;
+
+	public TableChildInfo(ConfigName parent, ConfigTableKey entry)
+	{
+		this.parent = parent;
+		this.entry = entry;
+	}
+
+	@Override
+	public String getName()
+	{
+		return this.entry.getName();
+	}
+
+	@Override
+	public Component getDisplayName()
+	{
+		return this.entry.getDisplayName();
+	}
+
+	@Override
+	public List<String> getPath()
+	{
+		var res = new ArrayList<>(this.parent.getPath());
+		res.add(this.entry.getName());
+		return res;
+	}
+
+	@Override
+	public String getCommentString()
+	{
+		return this.entry.getCommentString();
+	}
+
+	@Override
+	public List<? extends Component> getDisplayComment()
+	{
+		return this.entry.getDisplayComment();
+	}
+}
+
+enum RootInfo implements ConfigName
+{
+	INSTANCE;
+
+	@Override
+	public String getName()
+	{
+		return "";
+	}
+
+	@Override
+	public Component getDisplayName()
+	{
+		return Component.empty();
+	}
+
+	@Override
+	public List<String> getPath()
+	{
+		return List.of();
+	}
+
+	@Override
+	public String getCommentString()
+	{
+		return "";
+	}
+
+	@Override
+	public List<? extends Component> getDisplayComment()
+	{
+		return List.of(Component.literal(""));
 	}
 }
